--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,6 +134,11 @@ services:
       ports:
         - "${NGINX_HOST_HTTP_PORT}:80"
         - "${NGINX_HOST_HTTPS_PORT}:443"
+      environment:
+        VIRTUAL_HOST: ${NGINX_VIRTUAL_HOST}
+  #      VIRTUAL_PROTO: https
+        LETSENCRYPT_HOST: ${NGINX_LETSENCRYPT_HOST}
+        LETSENCRYPT_EMAIL: ${NGINX_LETSENCRYPT_EMAIL}
       depends_on:
         - php-fpm
       networks:
